--- a/2017/2017-08/2017-08-18/source/300x250.css
+++ b/2017/2017-08/2017-08-18/source/300x250.css
@@ -361,6 +361,197 @@
   }
 }
 
+/*-- slide in left --*/
+@-webkit-keyframes slideInLeft {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(100%,0);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes slideInLeft {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(100%,0);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+}
+@keyframes slideInLeft {
+  0%   {
+    visibility: visible;
+    transform: translate(100%,0);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,0);
+  }
+}
+
+/*-- slide out left --*/
+@-webkit-keyframes slideOutLeft {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(-100%,0);
+  }
+}
+@-moz-keyframes slideOutLeft {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(-100%,0);
+  }
+}
+@keyframes slideOutLeft {
+  0%   {
+    visibility: visible;
+    transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(-100%,0);
+  }
+}
+
+/*-- slide in right --*/
+@-webkit-keyframes slideInRight {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(-100%,0);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes slideInRight {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(-100%,0);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+}
+@keyframes slideInRight {
+  0%   {
+    visibility: visible;
+    transform: translate(-100%,0);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,0);
+  }
+}
+
+/*-- slide out right --*/
+@-webkit-keyframes slideOutRight {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(100%,0);
+  }
+}
+@-moz-keyframes slideOutRight {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(100%,0);
+  }
+}
+@keyframes slideOutRight {
+  0%   {
+    visibility: visible;
+    transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(100%,0);
+  }
+}
+
+/*-- slide out bottom --*/
+@-webkit-keyframes slideOutBottom {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,100%);
+  }
+}
+@-moz-keyframes slideOutBottom {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,100%);
+  }
+}
+@keyframes slideOutBottom {
+  0%   {
+    visibility: visible;
+    transform: translate(0,0);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,100%);
+  }
+}
+
+/*-- slide in bottom --*/
+@-webkit-keyframes slideInBottom {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes slideInBottom {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,0);
+  }
+}
+@keyframes slideInBottom {
+  0%   {
+    visibility: visible;
+    transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,0);
+  }
+}
 
 /*-------------------------------------------*/
 * {
@@ -431,79 +622,127 @@
   left: 13px;
   bottom: 15px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
-.frame1-text {
-  background: url('./images/300x250_frame1_text.png') no-repeat center center;
-  width: 150px;
-  height: 126px;
+.frame1-text1 {
+  background: url('./images/300x250_frame1_text1.png') no-repeat center center;
+  width: 122px;
+  height: 41px;
   top: 30px;
+  left: 48px;
+
+  -webkit-animation: slideInRight 0.25s linear 1.25s forwards;
+  -moz-animation: slideInRight 0.25s linear 1.25s forwards;
+  animation: slideInRight 0.25s linear 1.25s forwards;
+}
+.frame1-text2 {
+  background: url('./images/300x250_frame1_text2.png') no-repeat center center;
+  width: 150px;
+  height: 84px;
+  top: 73px;
   left: 20px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
+  -webkit-animation: slideInLeft 0.25s linear 1.75s forwards;
+  -moz-animation: slideInLeft 0.25s linear 1.75s forwards;
+  animation: slideInLeft 0.25s linear 1.75s forwards;
 }
+
 .frame1-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 4s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 4s forwards;
-  animation: fadeOut 0.75s ease-in-out 4s forwards;
+  -webkit-animation: slideOutLeft 0.25s linear 3.5s forwards;
+  -moz-animation: slideOutLeft 0.25s linear 3.5s forwards;
+  animation: slideOutLeft 0.25s linear 3.5s forwards;
 }
 
-
+.frame2-content {
+  -webkit-animation: slideInLeft 0.25s linear 3.5s forwards;
+  -moz-animation: slideInLeft 0.25s linear 3.5s forwards;
+  animation: slideInLeft 0.25s linear 3.5s forwards;
+}
 .frame2-bg {
   background: url('./images/300x250_frame2_bg.jpg') no-repeat center center;
-  -webkit-animation: fadeIn 0.75s ease-in-out 4.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 4.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 4.5s forwards;
 }
-.frame2-text {
-  background: url('./images/300x250_frame2_text.png') no-repeat center center;
-  width: 168px;
-  height: 106px;
+.frame2-text1 {
+  background: url('./images/300x250_frame2_text1.png') no-repeat center center;
+  width: 122px;
+  height: 41px;
   top: 41px;
+  left: 55px;
+
+  -webkit-animation: slideInRight 0.25s linear 4s forwards;
+  -moz-animation: slideInRight 0.25s linear 4s forwards;
+  animation: slideInRight 0.25s linear 4s forwards;
+}
+.frame2-text2 {
+  background: url('./images/300x250_frame2_text2.png') no-repeat center center;
+  width: 168px;
+  height: 75px;
+  top: 72px;
   left: 14px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 5.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 5.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 5.25s forwards;
-}
-.frame2-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 7.5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 7.5s forwards;
-  animation: fadeOut 0.75s ease-in-out 7.5s forwards;
+  -webkit-animation: slideInLeft 0.25s linear 4.5s forwards;
+  -moz-animation: slideInLeft 0.25s linear 4.5s forwards;
+  animation: slideInLeft 0.25s linear 4.5s forwards;
 }
 
+.frame2-container {
+  -webkit-animation: slideOutLeft 0.25s linear 6.25s forwards;
+  -moz-animation: slideOutLeft 0.25s linear 6.25s forwards;
+  animation: slideOutLeft 0.25s linear 6.25s forwards;
+}
+
+.frame3-container {
+  -webkit-animation: slideInLeft 0.25s linear 6.25s forwards;
+  -moz-animation: slideInLeft 0.25s linear 6.25s forwards;
+  animation: slideInLeft 0.25s linear 6.25s forwards;
+}
 .frame3-bg {
   background: url('./images/300x250_frame3_bg.jpg') no-repeat center center;
-  -webkit-animation: fadeIn 0.75s ease-in-out 8s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 8s forwards;
-  animation: fadeIn 0.75s ease-in-out 8s forwards;
 }
-.frame3-text {
-  background: url('./images/300x250_frame3_text.png') no-repeat center center;
-  width: 123px;
-  height: 125px;
+.frame3-text1 {
+  background: url('./images/300x250_frame3_text1.png') no-repeat center center;
+  width: 122px;
+  height: 41px;
   top: 23px;
   left: 36px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 8.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 8.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 8.75s forwards;
+  -webkit-animation: slideInRight 0.25s linear 6.75s forwards;
+  -moz-animation: slideInRight 0.25s linear 6.75s forwards;
+  animation: slideInRight 0.25s linear 6.75s forwards;
 }
-.frame3-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 11s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 11s forwards;
-  animation: fadeOut 0.75s ease-in-out 11s forwards;
+.frame3-text2 {
+  background: url('./images/300x250_frame3_text2.png') no-repeat center center;
+  width: 122px;
+  height: 82px;
+  top: 66px;
+  left: 38px;
+
+  -webkit-animation: slideInLeft 0.25s linear 7.25s forwards;
+  -moz-animation: slideInLeft 0.25s linear 7.25s forwards;
+  animation: slideInLeft 0.25s linear 7.25s forwards;
 }
 
+.frame123-container {
+  -webkit-animation: slideOutBottom 0.25s linear 9s forwards;
+  -moz-animation: slideOutBottom 0.25s linear 9s forwards;
+  animation: slideOutBottom 0.25s linear 9s forwards;
+}
+
+.frame4-container {
+  -webkit-animation: slideInBottom 0.25s linear 9s forwards;
+  -moz-animation: slideInBottom 0.25s linear 9s forwards;
+  animation: slideInBottom 0.25s linear 9s forwards;
+}
 .frame4-bg {
   background: url('./images/300x250_frame4_bg.jpg') no-repeat center center;
-  -webkit-animation: fadeIn 0.75s ease-in-out 11.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 11.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 11.5s forwards;
+}
+.frame4-image {
+  background: url('./images/300x250_image.png') no-repeat center center;
+  width: 110px;
+  height: 139px;
+  right: 11px;
+  bottom: 36px;
 }
 .small-logo {
   background: url('./images/300x250_small_logo.png') no-repeat center center;
@@ -511,21 +750,35 @@
   height: 31px;
   left: 110px;
   bottom: 16px;
-
-  -webkit-animation: fadeInDown 0.75s ease-in-out 12s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 12s forwards;
-  animation: fadeInDown 0.75s ease-in-out 12s forwards;
 }
-.frame4-text {
-  background: url('./images/300x250_frame4_text.png') no-repeat center center;
+.frame4-dot {
+  background: url('./images/300x250_frame4_dot.png') no-repeat center center;
   width: 139px;
   height: 136px;
   top: 25px;
   left: 23px;
+}
+.frame4-text1 {
+  background: url('./images/300x250_frame4_text1.png') no-repeat center center;
+  width: 138px;
+  height: 36px;
+  top: 45px;
+  left: 23px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 12.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 12.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 12.75s forwards;
+  -webkit-animation: slideInRight 0.25s linear 9.5s forwards;
+  -moz-animation: slideInRight 0.25s linear 9.5s forwards;
+  animation: slideInRight 0.25s linear 9.5s forwards;
+}
+.frame4-text2 {
+  background: url('./images/300x250_frame4_text2.png') no-repeat center center;
+  width: 139px;
+  height: 55px;
+  top: 87px;
+  left: 23px;
+
+  -webkit-animation: slideInLeft 0.25s linear 10s forwards;
+  -moz-animation: slideInLeft 0.25s linear 10s forwards;
+  animation: slideInLeft 0.25s linear 10s forwards;
 }
 .frame4-cta {
   background: url('./images/300x250_frame4_cta.png') no-repeat center center;
@@ -534,8 +787,7 @@
   left: 15px;
   bottom: 20px;
 
-  -webkit-animation: fadeInRight 0.75s ease-in-out 13.5s forwards;
-  -moz-animation: fadeInRight 0.75s ease-in-out 13.5s forwards;
-  animation: fadeInRight 0.75s ease-in-out 13.5s forwards;
-}
+  -webkit-animation: fadeIn 0.75s ease-in-out 10.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 10.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 10.5s forwards;
 }
