--- a/2017/2017-09/2017-09-12/source/320x50.css
+++ b/2017/2017-09/2017-09-12/source/320x50.css
@@ -456,9 +456,9 @@
   top: 15px;
   left: 12px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 2.25s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 2.25s forwards;
-  animation: fadeInDown 0.75s ease-in-out 2.25s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-out 2.25s forwards;
+  -moz-animation: fadeInDown 0.75s ease-out 2.25s forwards;
+  animation: fadeInDown 0.75s ease-out 2.25s forwards;
 }
 .text2 {
   background: url('./images/320x50_text2.png') no-repeat center center;
@@ -468,9 +468,9 @@
   top: 32px;
   left: 11px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-out 2.5s forwards;
+  -moz-animation: fadeInDown 0.75s ease-out 2.5s forwards;
+  animation: fadeInDown 0.75s ease-out 2.5s forwards;
 }
 
 .cta {
